tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/ap-northeast-1/ec2-describe-network-acls.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-95a8c8ea",
                    "NetworkAclId": "acl-8845cdee",
                    "SubnetId": "subnet-d952f691"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-96a8c8e9",
                    "NetworkAclId": "acl-8845cdee",
                    "SubnetId": "subnet-0f64cb24"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-97a8c8e8",
                    "NetworkAclId": "acl-8845cdee",
                    "SubnetId": "subnet-170a1c4c"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-8845cdee",
            "OwnerId": "111111111111",
            "Tags": [],
            "VpcId": "vpc-724c5615"
        }
    ]
}
