tests/knowledge/testing-accounts-data/account-data-vpc-platform/test/ap-northeast-1/ec2-describe-subnets.json
{
    "Subnets": [
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-northeast-1c",
            "AvailabilityZoneId": "apne1-az1",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.0.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-northeast-1:111111111111:subnet/subnet-170a1c4c",
            "SubnetId": "subnet-170a1c4c",
            "VpcId": "vpc-724c5615"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-northeast-1a",
            "AvailabilityZoneId": "apne1-az4",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.32.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-northeast-1:111111111111:subnet/subnet-d952f691",
            "SubnetId": "subnet-d952f691",
            "VpcId": "vpc-724c5615"
        },
        {
            "AssignIpv6AddressOnCreation": false,
            "AvailabilityZone": "ap-northeast-1d",
            "AvailabilityZoneId": "apne1-az2",
            "AvailableIpAddressCount": 4091,
            "CidrBlock": "172.31.16.0/20",
            "DefaultForAz": true,
            "Ipv6CidrBlockAssociationSet": [],
            "MapCustomerOwnedIpOnLaunch": false,
            "MapPublicIpOnLaunch": true,
            "OwnerId": "111111111111",
            "State": "available",
            "SubnetArn": "arn:aws:ec2:ap-northeast-1:111111111111:subnet/subnet-0f64cb24",
            "SubnetId": "subnet-0f64cb24",
            "VpcId": "vpc-724c5615"
        }
    ]
}
